--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="resulting_color">Resulting color</string>
     <string name="confirm">Confirm</string>
     <string name="dismiss">Dismiss</string>
+    <string name="add_new_frame">Add blank frame</string>
+    <string name="copy_frame">Copy current frame</string>
 </resources>
