--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="dismiss">Dismiss</string>
     <string name="add_new_frame">Add blank frame</string>
     <string name="copy_frame">Copy current frame</string>
+    <string name="fps">FPS</string>
 </resources>
