--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="add_new_frame">Add blank frame</string>
     <string name="copy_frame">Copy current frame</string>
     <string name="fps">FPS</string>
+    <string name="width_px">Width (px)</string>
 </resources>
